--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1",
+    "prop-types": "^15.6.2",
+    "ra-data-json-server": "^2.4.1",
     "react": "^16.6.1",
+    "react-admin": "^2.4.1",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1"
   },
